--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -1,6 +1,6 @@
 [buildconfig]
 builder = tito.builder.GemBuilder
-tagger = tito.tagger.ReleaseTagger
+tagger = tito.tagger.VersionTagger
 changelog_do_not_remove_cherrypick = 0
 changelog_format = %s (%ae)
 
@@ -17,3 +17,6 @@ scl = ruby193
 [requirements]
 tito=0.4.12
 
+[version_template]
+template_file = ./version.rb.tmpl
+destination_file = ./lib/foretello_api_v21/version.rb
